plot loss vs validation loss

--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -61,7 +61,6 @@
         "\r\n",
         "*   Layer von z_mean und z_log_var entsprechende Aktivierungsfunktionen\r\n",
         "*   nach encoder.summary (), encoder.compile(optimizer= …., loss=…) zu machen. (Das selber mit dem Decoder). Dann kann man nach trainieren des Modells : encoder.predict(DATAFRAME) machen und enthält damit die z-Werte für die Input Daten. Sonst gibt es in Tensorflow noch die Möglichkeit Layer direkt zu tracken\r\n",
-        "*    Als Kommentar ergänzen: Dabei ist euer reconstruction loss der Abstand Input <-> Output. Und die KL-Divergence berechnet den Abstand zwischen Verteilungen und sorgt somit für den regulären Laten Space.\r\n",
         "*    plottet man nämlich den Trainings Loss gegen den Validation Loss. Ihr habt keinen validation loss (hab gerade in den code geschaut), dann könnt ihr vae.evaluate(x_test) machen und den loss von .fit gegen den loss von .evaluate plotten. (Das gleiche könnt ihr dann natürlich auch für den reconstruction loss und die kl_divergence machen, müsst ihr aber nicht. Fürs erste ist der vollständige loss.)\r\n",
         "\r\n"
       ]
@@ -335,6 +334,9 @@
         "decoder = keras.Model(latent_inputs, decoder_outputs, name=\"decoder\")\r\n",
         "\r\n",
         "decoder.summary()\r\n",
+        "# configure decoder for training\r\n",
+        "decoder.compile(optimizer='adam', loss='binary_crossentropy')\r\n",
+        "\r\n",
         "plot_model(decoder, show_shapes=True, to_file='reconstruct_lstm_decoder.png')"
       ],
       "execution_count": null,
@@ -400,17 +402,18 @@
         "        super(VAE, self).__init__(**kwargs)\r\n",
         "        self.encoder = encoder\r\n",
         "        self.decoder = decoder\r\n",
-        "\r\n",
         "    def train_step(self, data):\r\n",
         "        if isinstance(data, tuple):\r\n",
         "            data = data[0]\r\n",
         "        with tf.GradientTape() as tape:\r\n",
         "            z_mean, z_log_var, z = encoder(data)\r\n",
         "            reconstruction = decoder(z)\r\n",
+        "            # reconstruction_loss = distance between Input and Output\r\n",
         "            reconstruction_loss = tf.reduce_mean(\r\n",
         "                keras.losses.binary_crossentropy(data, reconstruction)\r\n",
         "            )\r\n",
         "            reconstruction_loss *= 28 * 28\r\n",
+        "            # kl_loss = distance between distributions and thus ensures the regular laten space\r\n",
         "            kl_loss = 1 + z_log_var - tf.square(z_mean) - tf.exp(z_log_var)\r\n",
         "            kl_loss = tf.reduce_mean(kl_loss)\r\n",
         "            kl_loss *= -0.5\r\n",
@@ -462,7 +465,7 @@
       },
       "source": [
         "### Display the training progress\r\n",
-        "# WHAT IS THE DIFFERENCE BETWEEN THESE LOSS`s? WHAT DO THEY SHOW? WHAT ARE THEY?\r\n",
+        "# Loss vs Reconstruction_loss\r\n",
         "plt.figure(figsize=(20,12))\r\n",
         "plt.plot(history.history['loss'])\r\n",
         "plt.plot(history.history['reconstruction_loss'])\r\n",
@@ -476,12 +479,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "E-4uxGq4PgAv"
+        "id": "tcIrsjRDYOiI"
       },
       "source": [
-        "#### TODO (2): GET LATENT VECTOR AND SHOW MYU AND SIGMA\r\n",
-        "print(z_log_var)\r\n",
-        "print(z_mean)"
+        "# Train loss vs val loss\r\n",
+        "# Returns the loss value & metrics values for the model in test mode\r\n",
+        "val_loss = vae.evaluate(x_test)\r\n",
+        "\r\n",
+        "plt.figure(figsize=(20,12))\r\n",
+        "plt.plot(history.history['loss'])\r\n",
+        "plt.plot(val_loss['val_loss'])\r\n",
+        "plt.legend([\"Loss\", \"Validation Loss\"])\r\n",
+        "plt.xlabel(\"Epoch\")\r\n",
+        "plt.title(\"Loss vs. Validation Loss\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -492,7 +502,7 @@
         "id": "hOXeC5qZgBai"
       },
       "source": [
-        "### TODO (3): Display latent space\r\n",
+        "##################################################################################### TODO: Display latent space\r\n",
         "### Encode data into latent space and show the distribution using simple scatter plot\r\n",
         "bottleneck = encoder.predict(x_train)\r\n",
         "\r\n",
