Added Code to extract the labels (Classes from 1 to 5) i.e. the first column of ecg5000

--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -74,43 +74,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IcrTqGPsZceo",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e76293e8-a176-44f7-c048-92e34ccf6c46"
+        "id": "IcrTqGPsZceo"
       },
       "source": [
         "### Load ecg5000 data using read_csv\n",
         "ecg5000 = pd.read_csv('ECG5000_ALL.txt', sep='\\s+', header=None)\n",
-        "print(ecg5000.head)\n",
+        "#print(ecg5000.head)\n",
         "\n",
         "### Delete label-column first (column 0)\n",
-        "ecg5000.drop(ecg5000.columns[[0]], axis=1, inplace=True)"
+        "#ecg5000.drop(ecg5000.columns[[0]], axis=1, inplace=True)"
       ],
-      "execution_count": 65,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<bound method NDFrame.head of       0         1         2         3    ...       137       138       139       140\n",
-            "0     1.0 -0.112522 -2.827204 -3.773897  ...  0.228077  0.123431  0.925286  0.193137\n",
-            "1     1.0 -1.100878 -3.996840 -4.285843  ...  0.476333  0.773820  1.119621 -1.436250\n",
-            "2     1.0 -0.567088 -2.593450 -3.874230  ... -0.532197  0.321097  0.904227 -0.421797\n",
-            "3     1.0  0.490473 -1.914407 -3.616364  ...  0.990133  1.086798  1.403011 -0.383564\n",
-            "4     1.0  0.800232 -0.874252 -2.384761  ...  0.960304  0.971020  1.614392  1.421456\n",
-            "...   ...       ...       ...       ...  ...       ...       ...       ...       ...\n",
-            "4995  4.0 -1.122969 -2.252925 -2.867628  ... -4.009720 -2.874136 -2.008369 -1.808334\n",
-            "4996  2.0 -0.547705 -1.889545 -2.839779  ...  1.193433  1.261335  1.150449  0.804932\n",
-            "4997  2.0 -1.351779 -2.209006 -2.520225  ... -3.437038 -2.260023 -1.577823 -0.684531\n",
-            "4998  2.0 -1.124432 -1.905039 -2.192707  ... -1.262259 -0.443307 -0.559769  0.108568\n",
-            "4999  2.0  0.728813  0.192597 -0.733884  ...  1.753963  1.538975  1.713781  1.309382\n",
-            "\n",
-            "[5000 rows x 141 columns]>\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 151,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -119,7 +94,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9985ef8c-df2c-4a2a-916b-bbd86ca02800"
+        "outputId": "affe38f8-08fe-438b-8b56-b5a9663292ce"
       },
       "source": [
         "### Optional test and info about data set\n",
@@ -128,40 +103,31 @@
         "print(\"Number of elements of ecg5000: \\t {}\".format((ecg5000.size)))\n",
         "print(\"Display first 10 rows of ecg5000: \\n {}\".format(ecg5000.head(10)))"
       ],
-      "execution_count": 66,
+      "execution_count": 152,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Type of ecg5000: \t \t <class 'pandas.core.frame.DataFrame'>\n",
-            "Dimensions of ecg5000: \t \t (5000, 140)\n",
-            "Number of elements of ecg5000: \t 700000\n",
+            "Dimensions of ecg5000: \t \t (5000, 141)\n",
+            "Number of elements of ecg5000: \t 705000\n",
             "Display first 10 rows of ecg5000: \n",
-            "         1         2         3    ...       138       139       140\n",
-            "0 -0.112522 -2.827204 -3.773897  ...  0.123431  0.925286  0.193137\n",
-            "1 -1.100878 -3.996840 -4.285843  ...  0.773820  1.119621 -1.436250\n",
-            "2 -0.567088 -2.593450 -3.874230  ...  0.321097  0.904227 -0.421797\n",
-            "3  0.490473 -1.914407 -3.616364  ...  1.086798  1.403011 -0.383564\n",
-            "4  0.800232 -0.874252 -2.384761  ...  0.971020  1.614392  1.421456\n",
-            "5 -1.507674 -3.574550 -4.478011  ...  1.634990  1.493366 -0.783134\n",
-            "6 -0.297161 -2.766635 -4.102185  ...  1.110407  1.288165 -0.823386\n",
-            "7  0.446769 -1.507397 -3.187468  ...  1.258433  0.961215 -0.999476\n",
-            "8  0.087631 -1.753490 -3.304473  ...  0.192971 -0.648683 -2.441068\n",
-            "9 -0.832281 -1.700368 -2.257301  ...  2.126852  1.679299  0.965814\n",
+            "    0         1         2         3    ...       137       138       139       140\n",
+            "0  1.0 -0.112522 -2.827204 -3.773897  ...  0.228077  0.123431  0.925286  0.193137\n",
+            "1  1.0 -1.100878 -3.996840 -4.285843  ...  0.476333  0.773820  1.119621 -1.436250\n",
+            "2  1.0 -0.567088 -2.593450 -3.874230  ... -0.532197  0.321097  0.904227 -0.421797\n",
+            "3  1.0  0.490473 -1.914407 -3.616364  ...  0.990133  1.086798  1.403011 -0.383564\n",
+            "4  1.0  0.800232 -0.874252 -2.384761  ...  0.960304  0.971020  1.614392  1.421456\n",
+            "5  1.0 -1.507674 -3.574550 -4.478011  ...  1.007076  1.634990  1.493366 -0.783134\n",
+            "6  1.0 -0.297161 -2.766635 -4.102185  ...  0.974787  1.110407  1.288165 -0.823386\n",
+            "7  1.0  0.446769 -1.507397 -3.187468  ...  1.034388  1.258433  0.961215 -0.999476\n",
+            "8  1.0  0.087631 -1.753490 -3.304473  ...  0.573453  0.192971 -0.648683 -2.441068\n",
+            "9  1.0 -0.832281 -1.700368 -2.257301  ...  2.126372  2.126852  1.679299  0.965814\n",
             "\n",
-            "[10 rows x 140 columns]\n"
+            "[10 rows x 141 columns]\n"
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jOl-yE1aizs4"
-      },
-      "source": [
-        "## Scale Data"
       ]
     },
     {
@@ -171,33 +137,51 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "37cf21e2-70a8-4cef-f9d3-9aa087c4d8b3"
+        "outputId": "30b791d6-d87c-49c6-eb09-1dbbb130f1a4"
       },
       "source": [
+        "### Get YLabel df\n",
+        "dfYLabel = ecg5000.iloc[:,0]\n",
+        "print(dfYLabel)\n",
+        "### Drop yLabel DF\n",
+        "ecg5000.drop(ecg5000.columns[[0]], axis=1, inplace=True)\n",
+        "\n",
         "### Normalize dataframe with min-max-normalization to range between [-0.8, 0.8] using sklearn MinMaxScaler\n",
         "min_max_scaler = MinMaxScaler(feature_range=(-0.8,0.8))\n",
         "scaled_ecg5000 = pd.DataFrame(min_max_scaler.fit_transform(ecg5000))\n",
         "print(scaled_ecg5000)"
       ],
-      "execution_count": 67,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "           0         1         2    ...       137       138       139\n",
-            "0     0.105202 -0.154680 -0.521072  ...  0.190712  0.256566 -0.054755\n",
-            "1    -0.030005 -0.331729 -0.626180  ...  0.305374  0.286734 -0.247949\n",
-            "2     0.043017 -0.119297 -0.541672  ...  0.225560  0.253297 -0.127667\n",
-            "3     0.187692 -0.016509 -0.488729  ...  0.360551  0.330726 -0.123133\n",
-            "4     0.230067  0.140940 -0.235867  ...  0.340140  0.363540  0.090885\n",
+            "0      -0.112522\n",
+            "1      -1.100878\n",
+            "2      -0.567088\n",
+            "3       0.490473\n",
+            "4       0.800232\n",
+            "          ...   \n",
+            "4995   -1.122969\n",
+            "4996   -0.547705\n",
+            "4997   -1.351779\n",
+            "4998   -1.124432\n",
+            "4999    0.728813\n",
+            "Name: 1, Length: 5000, dtype: float64\n",
+            "           0         1         2    ...       136       137       138\n",
+            "0    -0.154680 -0.521072 -0.576735  ...  0.190712  0.256566 -0.054755\n",
+            "1    -0.331729 -0.626180 -0.611283  ...  0.305374  0.286734 -0.247949\n",
+            "2    -0.119297 -0.541672 -0.628359  ...  0.225560  0.253297 -0.127667\n",
+            "3    -0.016509 -0.488729 -0.569922  ...  0.360551  0.330726 -0.123133\n",
+            "4     0.140940 -0.235867 -0.493803  ...  0.340140  0.363540  0.090885\n",
             "...        ...       ...       ...  ...       ...       ...       ...\n",
-            "4995 -0.033027 -0.067751 -0.335005  ... -0.337752 -0.198844 -0.292066\n",
-            "4996  0.045669 -0.012746 -0.329288  ...  0.391322  0.291519  0.017785\n",
-            "4997 -0.064328 -0.061103 -0.263680  ... -0.229486 -0.132008 -0.158819\n",
-            "4998 -0.033227 -0.015091 -0.196437  ...  0.090797  0.026031 -0.064782\n",
-            "4999  0.220296  0.302430  0.103076  ...  0.440269  0.378969  0.077596\n",
+            "4995 -0.067751 -0.335005 -0.358392  ... -0.337752 -0.198844 -0.292066\n",
+            "4996 -0.012746 -0.329288 -0.380268  ...  0.391322  0.291519  0.017785\n",
+            "4997 -0.061103 -0.263680 -0.292936  ... -0.229486 -0.132008 -0.158819\n",
+            "4998 -0.015091 -0.196437 -0.258316  ...  0.090797  0.026031 -0.064782\n",
+            "4999  0.302430  0.103076 -0.010515  ...  0.440269  0.378969  0.077596\n",
             "\n",
-            "[5000 rows x 140 columns]\n"
+            "[5000 rows x 139 columns]\n"
           ],
           "name": "stdout"
         }
@@ -219,7 +203,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dc206a84-2ace-4410-a233-8853465c8fbf"
+        "outputId": "3a15afa1-699d-4245-ad30-8dfd454f6f9c"
       },
       "source": [
         "### Split Data into 80/20 Training, Test\n",
@@ -228,13 +212,13 @@
         "print(\"Shape of Training DataFrame: \\t {}\".format(trainDF.shape))\n",
         "print(\"Shape of Test DataFrame: \\t {}\".format(testDF.shape))"
       ],
-      "execution_count": 68,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Shape of Training DataFrame: \t (4000, 140)\n",
-            "Shape of Test DataFrame: \t (1000, 140)\n"
+            "Shape of Training DataFrame: \t (4000, 141)\n",
+            "Shape of Test DataFrame: \t (1000, 141)\n"
           ],
           "name": "stdout"
         }
