--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -517,6 +517,7 @@
         "      drop_out_rate = drop_value\r\n",
         "      print(\"----- Dropout Rate: {} -----\".format(drop_out_rate))\r\n",
         "      # evaluate\r\n",
+        "      # rather shorten code with defining a train function of code above and using it here\r\n",
         "      vae = VAE(encoder, decoder, name=\"VAE\")\r\n",
         "      vae.compile(optimizer='adam', loss='mean_squared_error')\r\n",
         "      history = vae.fit(x_train, y_train, epochs=epochs, batch_size=batch_size, validation_data=(x_test, y_test), verbose=0)\r\n",
