--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -52,7 +52,7 @@
         "\n",
         "sns.set()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,11 +102,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QdbiFe4pZlQv",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "cface285-8a11-4e41-f4dd-ff7f9b8fd24b"
+        "id": "QdbiFe4pZlQv"
       },
       "source": [
         "### Optional test and info about data set\n",
@@ -116,70 +112,21 @@
         "print(\"Display first 10 rows of ecg5000: \\n {}\".format(ecg5000.head(10)))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Type of ecg5000: \t \t <class 'pandas.core.frame.DataFrame'>\n",
-            "Dimensions of ecg5000: \t \t (5000, 141)\n",
-            "Number of elements of ecg5000: \t 705000\n",
-            "Display first 10 rows of ecg5000: \n",
-            "    0         1         2         3    ...       137       138       139       140\n",
-            "0  1.0 -0.112522 -2.827204 -3.773897  ...  0.228077  0.123431  0.925286  0.193137\n",
-            "1  1.0 -1.100878 -3.996840 -4.285843  ...  0.476333  0.773820  1.119621 -1.436250\n",
-            "2  1.0 -0.567088 -2.593450 -3.874230  ... -0.532197  0.321097  0.904227 -0.421797\n",
-            "3  1.0  0.490473 -1.914407 -3.616364  ...  0.990133  1.086798  1.403011 -0.383564\n",
-            "4  1.0  0.800232 -0.874252 -2.384761  ...  0.960304  0.971020  1.614392  1.421456\n",
-            "5  1.0 -1.507674 -3.574550 -4.478011  ...  1.007076  1.634990  1.493366 -0.783134\n",
-            "6  1.0 -0.297161 -2.766635 -4.102185  ...  0.974787  1.110407  1.288165 -0.823386\n",
-            "7  1.0  0.446769 -1.507397 -3.187468  ...  1.034388  1.258433  0.961215 -0.999476\n",
-            "8  1.0  0.087631 -1.753490 -3.304473  ...  0.573453  0.192971 -0.648683 -2.441068\n",
-            "9  1.0 -0.832281 -1.700368 -2.257301  ...  2.126372  2.126852  1.679299  0.965814\n",
-            "\n",
-            "[10 rows x 141 columns]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WCvRjcSqjFED",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "43739fc7-a9a9-4e6f-9eff-b41ca160c0b2"
+        "id": "WCvRjcSqjFED"
       },
       "source": [
-        "### Normalize dataframe with min-max-normalization to range between [-0.8, 0.8] using sklearn MinMaxScaler\n",
-        "min_max_scaler = MinMaxScaler(feature_range=(-0.8,0.8))\n",
-        "scaled_ecg5000 = pd.DataFrame(min_max_scaler.fit_transform(ecg5000))\n",
-        "print(scaled_ecg5000)"
+        "# ### Normalize dataframe with min-max-normalization to range between [-0.8, 0.8] using sklearn MinMaxScaler\n",
+        "# min_max_scaler = MinMaxScaler(feature_range=(-0.8,0.8))\n",
+        "# scaled_ecg5000 = pd.DataFrame(min_max_scaler.fit_transform(ecg5000))\n",
+        "# print(scaled_ecg5000)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "      0         1         2         3    ...       137       138       139       140\n",
-            "0    -0.8  0.105202 -0.154680 -0.521072  ...  0.183241  0.190712  0.256566 -0.054755\n",
-            "1    -0.8 -0.030005 -0.331729 -0.626180  ...  0.231023  0.305374  0.286734 -0.247949\n",
-            "2    -0.8  0.043017 -0.119297 -0.541672  ...  0.036911  0.225560  0.253297 -0.127667\n",
-            "3    -0.8  0.187692 -0.016509 -0.488729  ...  0.329914  0.360551  0.330726 -0.123133\n",
-            "4    -0.8  0.230067  0.140940 -0.235867  ...  0.324173  0.340140  0.363540  0.090885\n",
-            "...   ...       ...       ...       ...  ...       ...       ...       ...       ...\n",
-            "4995  0.4 -0.033027 -0.067751 -0.335005  ... -0.632409 -0.337752 -0.198844 -0.292066\n",
-            "4996 -0.4  0.045669 -0.012746 -0.329288  ...  0.369043  0.391322  0.291519  0.017785\n",
-            "4997 -0.4 -0.064328 -0.061103 -0.263680  ... -0.522184 -0.229486 -0.132008 -0.158819\n",
-            "4998 -0.4 -0.033227 -0.015091 -0.196437  ... -0.103605  0.090797  0.026031 -0.064782\n",
-            "4999 -0.4  0.220296  0.302430  0.103076  ...  0.476928  0.440269  0.378969  0.077596\n",
-            "\n",
-            "[5000 rows x 141 columns]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -364,21 +311,21 @@
         "id": "4194a4eCBSh5"
       },
       "source": [
-        "def create_encoder(encoding_dim=140, intermediate_dim=140, latent_dim=5, activation='tanh', dropout_rate=0.2, regulazier_rate=0.004): # maybe delete encoding and latent dim, do something with input shape\r\n",
+        "def create_encoder(encoding_dim=140, intermediate_dim=140, latent_dim=5, latent_activation='softplus', dropout_rate=0.2, regulazier_rate=0.004): # maybe delete encoding and latent dim, do something with input shape\r\n",
         "    \"\"\"Maps ECG5000 time series to a triplet (z_mean, z_log_var, z).\"\"\"\r\n",
         "\r\n",
         "    ### Define Layers\r\n",
         "    encoder_inputs = keras.Input(shape=(140, 1), name='Encoder_Input_layer')\r\n",
         "\r\n",
-        "    encoded = Bidirectional(LSTM(intermediate_dim, activation=activation, name='', return_sequences=True), name='Encode_1')(encoder_inputs)\r\n",
-        "    encoded= Flatten()(encoded) \r\n",
+        "    encoded = Bidirectional(LSTM(intermediate_dim, activation='tanh', name='', return_sequences=True), name='Encode_1')(encoder_inputs)\r\n",
+        "    encoded = Flatten()(encoded) \r\n",
         "    encoded = Dropout(dropout_rate, name='Dropout_1')(encoded)\r\n",
-        "    encoded = Dense(latent_dim, activation=activation, name='Encode_2', kernel_regularizer=l2(regulazier_rate), activity_regularizer=l2(regulazier_rate))(encoded)\r\n",
+        "    encoded = Dense(latent_dim, activation='tanh', name='Encode_2', kernel_regularizer=l2(regulazier_rate), activity_regularizer=l2(regulazier_rate))(encoded)\r\n",
         "\r\n",
-        "    z_mean = Dense(latent_dim, activation=\"softplus\", name=\"z_mean\")(encoded)\r\n",
+        "    z_mean = Dense(latent_dim, activation=latent_activation, name=\"z_mean\")(encoded)\r\n",
         "    #z_mean = BatchNormalization()(z_mean)  \r\n",
         "\r\n",
-        "    z_log_var = Dense(latent_dim, activation=\"softplus\", name=\"z_log_var\")(encoded)\r\n",
+        "    z_log_var = Dense(latent_dim, activation=latent_activation, name=\"z_log_var\")(encoded)\r\n",
         "    #z_log_var = BatchNormalization()(z_log_var)\r\n",
         "\r\n",
         "    z = Sampling(name='Sample_layer')([z_mean, z_log_var])\r\n",
@@ -394,49 +341,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WCpMI6C0Diyv",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "249950c8-1363-4db6-c7cd-929bf7eaea3b"
+        "id": "WCpMI6C0Diyv"
       },
       "source": [
         "### Check if encoder works\r\n",
-        "encoder = create_encoder() \r\n",
-        "encoder.summary()"
+        "encoder_test = create_encoder() \r\n",
+        "encoder_test.summary()"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Model: \"encoder\"\n",
-            "__________________________________________________________________________________________________\n",
-            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-            "==================================================================================================\n",
-            "Encoder_Input_layer (InputLayer [(None, 140, 1)]     0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "Encode_1 (Bidirectional)        (None, 280)          159040      Encoder_Input_layer[0][0]        \n",
-            "__________________________________________________________________________________________________\n",
-            "Dropout_1 (Dropout)             (None, 280)          0           Encode_1[0][0]                   \n",
-            "__________________________________________________________________________________________________\n",
-            "Encode_2 (Dense)                (None, 5)            1405        Dropout_1[0][0]                  \n",
-            "__________________________________________________________________________________________________\n",
-            "z_mean (Dense)                  (None, 5)            30          Encode_2[0][0]                   \n",
-            "__________________________________________________________________________________________________\n",
-            "z_log_var (Dense)               (None, 5)            30          Encode_2[0][0]                   \n",
-            "__________________________________________________________________________________________________\n",
-            "Sample_layer (Sampling)         (None, 5)            0           z_mean[0][0]                     \n",
-            "                                                                 z_log_var[0][0]                  \n",
-            "==================================================================================================\n",
-            "Total params: 160,505\n",
-            "Trainable params: 160,505\n",
-            "Non-trainable params: 0\n",
-            "__________________________________________________________________________________________________\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -453,16 +366,16 @@
         "id": "sxnUeH7FBJVH"
       },
       "source": [
-        "def create_decoder(encoding_dim=140, intermediate_dim=140, latent_dim=5, activation='tanh', dropout_rate=0.2, regulazier_rate=0.004): # maybe delete encoding and latent dim, do something with input shape\r\n",
+        "def create_decoder(encoding_dim=140, intermediate_dim=140, latent_dim=5, dropout_rate=0.2, regulazier_rate=0.004): # maybe delete encoding and latent dim, do something with input shape\r\n",
         "    \"\"\"Converts z, the encoded time series, back into a readable time series.\"\"\"\r\n",
         "    \r\n",
         "    ### Define Layers\r\n",
         "    latent_inputs = keras.Input(shape=(latent_dim,), name='Decoder_Input_layer')\r\n",
         "\r\n",
-        "    decoded = Dense(encoding_dim*200, activation=activation, name='Decode_1', kernel_regularizer=l2(regulazier_rate), activity_regularizer=l2(regulazier_rate))(latent_inputs)\r\n",
-        "    decoded = Reshape((140,200), name='Decode_2')(decoded)\r\n",
+        "    decoded = Dense(encoding_dim*256, activation='tanh', name='Decode_1', kernel_regularizer=l2(regulazier_rate), activity_regularizer=l2(regulazier_rate))(latent_inputs)\r\n",
+        "    decoded = Reshape((140,256), name='Decode_2')(decoded)\r\n",
         "    decoded = Dropout(dropout_rate, name='Dropout_1')(decoded)\r\n",
-        "    decoded = Bidirectional(LSTM(intermediate_dim, activation=activation, return_sequences=True, name=''), name='Decode_3')(decoded)\r\n",
+        "    decoded = Bidirectional(LSTM(intermediate_dim, activation='tanh', return_sequences=True, name=''), name='Decode_3')(decoded)\r\n",
         "\r\n",
         "    decoder_outputs = TimeDistributed(Dense(1, activation='linear', name=''),name='Decoder_Output_Layer')(decoded)\r\n",
         "\r\n",
@@ -485,8 +398,8 @@
       },
       "source": [
         "### Check if decoder works\r\n",
-        "decoder = create_decoder()\r\n",
-        "decoder.summary()"
+        "decoder_test = create_decoder()\r\n",
+        "decoder_test.summary()"
       ],
       "execution_count": null,
       "outputs": [
@@ -562,9 +475,11 @@
         "            reconstruction = self.decoder(z)\r\n",
         "            # Compute own loss\r\n",
         "            reconstruction_loss = tf.reduce_mean(\r\n",
-        "                keras.losses.mean_squared_error(data, reconstruction)\r\n",
+        "                keras.losses.mean_squared_error(data, reconstruction)*140\r\n",
         "            )\r\n",
-        "            kl_loss = -0.5 * tf.reduce_mean(1 + z_log_var - tf.square(z_mean) - tf.exp(z_log_var))\r\n",
+        "            kl_loss = 1 + z_log_var - tf.square(z_mean) - tf.exp(z_log_var)\r\n",
+        "            kl_loss = tf.reduce_mean(kl_loss)\r\n",
+        "            kl_loss *= -0.5\r\n",
         "            total_loss = reconstruction_loss + kl_loss\r\n",
         "        # compute gradients\r\n",
         "        grads = tape.gradient(total_loss, self.trainable_weights)\r\n",
@@ -613,13 +528,13 @@
       },
       "source": [
         "### Definde function to create model\r\n",
-        "def create_model(activation='tanh', intermediate_dim=140, dropout_rate=0.2, regulazier_rate=0.004, optimizer='adam', learn_rate=0.001, name='VAE'):\r\n",
+        "def create_model(latent_activation='softplus', intermediate_dim=140, dropout_rate=0.2, regulazier_rate=0.004, optimizer='adam', learn_rate=0.001, name='VAE'):\r\n",
         "    \"\"\"Creates VAE model, required for wrapping in estimator interface KerasRegressor, while accepting the hyperparameters we want to tune. We also pass some default values.\"\"\"\r\n",
         "    \r\n",
         "    # create encoder \r\n",
-        "    encoder = create_encoder(activation=activation, intermediate_dim=intermediate_dim, dropout_rate=dropout_rate, regulazier_rate=regulazier_rate)\r\n",
+        "    encoder = create_encoder(latent_activation=latent_activation, intermediate_dim=intermediate_dim, dropout_rate=dropout_rate, regulazier_rate=regulazier_rate)\r\n",
         "    # create decoder \r\n",
-        "    decoder = create_decoder(activation=activation, intermediate_dim=intermediate_dim, dropout_rate=dropout_rate, regulazier_rate=regulazier_rate)\r\n",
+        "    decoder = create_decoder(intermediate_dim=intermediate_dim, dropout_rate=dropout_rate, regulazier_rate=regulazier_rate)\r\n",
         "    # create vae\r\n",
         "    model = VAE(encoder, decoder, name=name)\r\n",
         "    # compile model\r\n",
@@ -748,7 +663,7 @@
       },
       "source": [
         "### Train Properties\r\n",
-        "epochs = 50 #50, 100\r\n",
+        "epochs = 100 #50, 100\r\n",
         "batch_size = 16 #16, 32"
       ],
       "execution_count": null,
@@ -1313,9 +1228,9 @@
         "space = {\r\n",
         "        #'epochs' :              [20, 50],\r\n",
         "        #'batch_size' :          [16, 32],\r\n",
-        "        #'activation' :          ['tanh'],\r\n",
+        "        'latent_activation' :   ['softplus', 'softmax'],\r\n",
         "        'dropout_rate' :        [0.2, 0.3, 0.5],\r\n",
-        "        'regulazier_rate' :     [0.001,0.004],\r\n",
+        "        'regulazier_rate' :     [0.001,0.004,0.01],\r\n",
         "        'optimizer' :           ['adam', 'SGD'],\r\n",
         "        'learn_rate' :          [0.001, 0.01],\r\n",
         "        }\r\n",
@@ -1451,7 +1366,7 @@
         "# Safe fig\r\n",
         "plt.savefig(fname = \"scores.png\")"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1466,17 +1381,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vw_mYzbS6B_w"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
