--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -6,6 +6,7 @@
       "name": "VAE_v1_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +56,7 @@
         "sns.set_style(\"whitegrid\")\n",
         "sns.set_context(\"paper\")\n"
       ],
-      "execution_count": 61,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -64,9 +65,9 @@
         "id": "xRwBwVXkkKTt"
       },
       "source": [
-        "#tf.random.set_seed(7) "
+        "tf.random.set_seed(7) "
       ],
-      "execution_count": 62,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -99,7 +100,7 @@
         "### Load ecg5000 data using read_csv\n",
         "ecg5000 = pd.read_csv('ECG5000_ALL.txt', sep='\\s+', header=None)"
       ],
-      "execution_count": 63,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -109,7 +110,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "08408c4e-7827-4033-c56d-44d21e0f79f2"
+        "outputId": "6ac04a70-4ce7-4e81-aacc-9e6caa681afa"
       },
       "source": [
         "### Optional test and info about data set\n",
@@ -118,7 +119,7 @@
         "print(\"Number of elements of ecg5000: \\t {}\".format((ecg5000.size)))\n",
         "print(\"Display first 10 rows of ecg5000: \\n {}\".format(ecg5000.head(10)))"
       ],
-      "execution_count": 64,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +157,7 @@
         "# scaled_ecg5000 = pd.DataFrame(min_max_scaler.fit_transform(ecg5000))\n",
         "# print(scaled_ecg5000)"
       ],
-      "execution_count": 65,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -175,7 +176,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9c776578-438c-46b1-e57b-895b299c4900"
+        "outputId": "b2e65e9b-a249-4d2d-ebe9-672d7c312764"
       },
       "source": [
         "### Split Data into 80/20 Training, Test\n",
@@ -195,7 +196,7 @@
         "print(\"Shape of Train Y DataFrame: \\t {}\".format(trainDF_Y.shape))\n",
         "print(\"Shape of Test Y DataFrame: \\t {}\".format(testDF_Y.shape))"
       ],
-      "execution_count": 66,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +237,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "26c91e62-30bb-4746-bdad-718173b13e72"
+        "outputId": "aa2da255-09ad-41fa-d290-f4e673406b75"
       },
       "source": [
         "### Convert to array\n",
@@ -270,7 +271,7 @@
         "print(\"Shape of y_train: {}\".format(y_train.shape))\n",
         "print(\"Shape of y_test: {}\".format(y_test.shape))"
       ],
-      "execution_count": 67,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,7 +313,7 @@
         "        epsilon = tf.keras.backend.random_normal(shape=(batch, dim))\r\n",
         "        return z_mean + tf.exp(0.5 * z_log_var) * epsilon"
       ],
-      "execution_count": 68,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -361,7 +362,7 @@
         "\r\n",
         "    return encoder"
       ],
-      "execution_count": 69,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -371,14 +372,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "08b96e14-f1b0-4e50-906d-9c034a65c960"
+        "outputId": "2d2ea663-5ed9-4c06-97d3-b3cd42c891a8"
       },
       "source": [
         "### Check if encoder works\r\n",
         "encoder_test = create_encoder() \r\n",
         "encoder_test.summary()"
       ],
-      "execution_count": 70,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +445,7 @@
         "\r\n",
         "    return decoder"
       ],
-      "execution_count": 71,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -454,14 +455,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0affa585-b56b-4c03-a024-3d64a2fbabd3"
+        "outputId": "84a8e4b5-8f20-472d-80a1-704bf46c24dd"
       },
       "source": [
         "### Check if decoder works\r\n",
         "decoder_test = create_decoder()\r\n",
         "decoder_test.summary()"
       ],
-      "execution_count": 72,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +507,7 @@
         "id": "aNwUKMjdFM_L"
       },
       "source": [
-        "Define VAE Model"
+        "### Define VAE Model"
       ]
     },
     {
@@ -567,7 +568,7 @@
         "        reconstructed = self.decoder(z)\r\n",
         "        return reconstructed"
       ],
-      "execution_count": 73,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -576,7 +577,7 @@
         "id": "hWJVg5WPFQlb"
       },
       "source": [
-        "Build VAE connecting Encoder and Decoder"
+        "### Build VAE connecting Encoder and Decoder"
       ]
     },
     {
@@ -605,7 +606,7 @@
         "    \r\n",
         "    return model"
       ],
-      "execution_count": 74,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -615,7 +616,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a63a6b19-78dd-4ce1-a4d2-ef348a29218a"
+        "outputId": "0bb8ec8d-d0bf-46ab-9a6a-494f35bded9d"
       },
       "source": [
         "### Instantiate VAE model\r\n",
@@ -633,7 +634,7 @@
         "# vae\r\n",
         "vae.summary(line_length=100)"
       ],
-      "execution_count": 75,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,7 +725,7 @@
         "epochs = 100 #50, 100\r\n",
         "batch_size = 16 #16, 32"
       ],
-      "execution_count": 76,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -739,35 +740,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BTkdJdc_N5SN",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7f449bfa-2b5f-47cd-8202-f795068fe752"
+        "id": "BTkdJdc_N5SN"
       },
       "source": [
         "### Train\r\n",
         "train_history = vae.fit(x_train, x_train, epochs=epochs, batch_size=batch_size, validation_data=(x_test, x_test))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/100\n",
-            "250/250 [==============================] - 11s 29ms/step - loss: 56.2859 - reconstruction_loss: 54.9452 - kl_loss: 1.3407 - val_loss: 0.9366\n",
-            "Epoch 2/100\n",
-            "250/250 [==============================] - 6s 24ms/step - loss: 40.3236 - reconstruction_loss: 38.5450 - kl_loss: 1.7785 - val_loss: 1.4906\n",
-            "Epoch 3/100\n",
-            "250/250 [==============================] - 6s 24ms/step - loss: 36.9280 - reconstruction_loss: 34.7879 - kl_loss: 2.1401 - val_loss: 1.7595\n",
-            "Epoch 4/100\n",
-            "250/250 [==============================] - 6s 24ms/step - loss: 34.5073 - reconstruction_loss: 32.1666 - kl_loss: 2.3407 - val_loss: 2.3102\n",
-            "Epoch 5/100\n",
-            "250/250 [==============================] - ETA: 0s - loss: 33.4201 - reconstruction_loss: 30.9383 - kl_loss: 2.4817"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1170,17 +1150,17 @@
         "        #'epochs' :              [50, 100],\r\n",
         "        #'latent_activation' :   ['softplus','softmax','sigmoid'],\r\n",
         "        #'optimizer' :           ['adam', 'SGD'],\r\n",
-        "        'batch_size' :          list(range[16,32]),\r\n",
+        "        'batch_size' :          list(np.logspace(0,6,7, base=2, dtype=int)),\r\n",
         "        'dropout_rate' :        list(np.linspace(0, 1)),\r\n",
-        "        'regulazier_rate' :     [1e-1, 1e-2, 1e-3, 1e-4, 1e-5, 1e-6],\r\n",
-        "        'learn_rate' :          list(np.logspace(np.log10(0.005), np.log10(0.5), base = 10, num = 1000)),\r\n",
+        "        'regulazier_rate' :     list(np.logspace(-6,-1,6)),\r\n",
+        "        'learn_rate' :          list(np.logspace(np.log10(0.005), np.log10(0.5), base = 10, num = 100)),\r\n",
         "        }\r\n",
         "\r\n",
         "### Wrap keras custom VAE model with the KerasClassifier thus it implements estimator interface\r\n",
         "model = KerasRegressor(build_fn=create_model)\r\n",
         "\r\n",
         "### Run RandomizedSearch\r\n",
-        "fitted_model, pred, rs_result, min_rs_results= randomizedSearch_pipeline(x_train, x_test, model, space, n_iter=40, scoring_fit=make_scorer(score_mse, greater_is_better=False))"
+        "fitted_model, pred, rs_result, min_rs_results= randomizedSearch_pipeline(x_train, x_test, model, space, n_iter=4, scoring_fit=make_scorer(score_mse, greater_is_better=False))"
       ],
       "execution_count": null,
       "outputs": []
