removed pandas warning

--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -34,6 +34,7 @@
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
+        "pd.options.mode.chained_assignment = None  # default='warn'\n",
         "\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
