estimated how many components are needed to describe the data

--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -54,10 +54,10 @@
         "\n",
         "sns.set()\n",
         "sns.set_palette(sns.color_palette(\"Set1\")) #tab10 #viridis\n",
-        "sns.set_style(\"whitegrid\")\n",
+        "#sns.set_style(\"whitegrid\")\n",
         "sns.set_context(\"paper\")\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
       "source": [
         "tf.random.set_seed(7) "
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +101,7 @@
         "### Load ecg5000 data using read_csv\n",
         "ecg5000 = pd.read_csv('ECG5000_ALL.txt', sep='\\s+', header=None)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
         "print(\"Number of elements of ecg5000: \\t {}\".format((ecg5000.size)))\n",
         "print(\"Display first 10 rows of ecg5000: \\n {}\".format(ecg5000.head(10)))"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
         "# scaled_ecg5000 = pd.DataFrame(min_max_scaler.fit_transform(ecg5000))\n",
         "# print(scaled_ecg5000)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +197,7 @@
         "print(\"Shape of Train Y DataFrame: \\t {}\".format(trainDF_Y.shape))\n",
         "print(\"Shape of Test Y DataFrame: \\t {}\".format(testDF_Y.shape))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
         "print(\"Shape of y_train: {}\".format(y_train.shape))\n",
         "print(\"Shape of y_test: {}\".format(y_test.shape))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +314,7 @@
         "        epsilon = tf.keras.backend.random_normal(shape=(batch, dim))\r\n",
         "        return z_mean + tf.exp(0.5 * z_log_var) * epsilon"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +363,7 @@
         "\r\n",
         "    return encoder"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
         "encoder_test = create_encoder() \r\n",
         "encoder_test.summary()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +446,7 @@
         "\r\n",
         "    return decoder"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -463,7 +463,7 @@
         "decoder_test = create_decoder()\r\n",
         "decoder_test.summary()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +569,7 @@
         "        reconstructed = self.decoder(z)\r\n",
         "        return reconstructed"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -607,7 +607,7 @@
         "    \r\n",
         "    return model"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -635,7 +635,7 @@
         "# vae\r\n",
         "vae.summary(line_length=100)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -726,7 +726,7 @@
         "epochs = 100 #50, 100\r\n",
         "batch_size = 16 #16, 32"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -902,15 +902,28 @@
         "id": "ldOtLNeJYJmb"
       },
       "source": [
-        "### PCA (5 dim -> 2 dim): display a 2D plot of the classes in the latent space.\r\n",
+        "### PCA\r\n",
         "from sklearn.preprocessing import StandardScaler\r\n",
         "from sklearn.decomposition import PCA\r\n",
         "# transform to dataframe\r\n",
         "z_test = pd.DataFrame(z_values)\r\n",
         "# standardize the data\r\n",
-        "z_test = StandardScaler().fit_transform(z_test)\r\n",
-        "# make PCA instance\r\n",
-        "pca = PCA(n_components=2)"
+        "z_test = StandardScaler().fit_transform(z_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ksY0r5zQsVjn"
+      },
+      "source": [
+        "### Estimate how many components are needed to describe the data\r\n",
+        "pca_explained = PCA().fit(z_test)\r\n",
+        "plt.plot(np.cumsum(pca_explaoned.explained_variance_ratio_))\r\n",
+        "plt.xlabel('number of components')\r\n",
+        "plt.ylabel('cumulative explained variance');"
       ],
       "execution_count": null,
       "outputs": []
@@ -921,13 +934,14 @@
         "id": "pjILQXppYgIP"
       },
       "source": [
+        "### PCA (5 dim -> 2 dim): display a 2D plot of the classes in the latent space.\r\n",
+        "# make PCA instance\r\n",
+        "pca = PCA(n_components=2)\r\n",
         "# fit transform features\r\n",
         "principalComponents = pca.fit_transform(z_test)\r\n",
-        "\r\n",
+        "# build pca dataframe\r\n",
         "principalDf = pd.DataFrame(data=principalComponents, columns=['principal component 1', 'principal component 2'])\r\n",
         "targetDF = pd.DataFrame(data=testDF_Y.to_numpy(), columns=['target'])\r\n",
-        "target = testDF_Y.to_numpy()\r\n",
-        "\r\n",
         "finalDF = pd.concat([principalDf, targetDF], axis = 1)"
       ],
       "execution_count": null,
