--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -902,7 +902,7 @@
         "id": "ldOtLNeJYJmb"
       },
       "source": [
-        "### PCA\r\n",
+        "### Scale Datan (PCA)\r\n",
         "from sklearn.preprocessing import StandardScaler\r\n",
         "from sklearn.decomposition import PCA\r\n",
         "# transform to dataframe\r\n",
@@ -919,7 +919,7 @@
         "id": "ksY0r5zQsVjn"
       },
       "source": [
-        "### Estimate how many components are needed to describe the data\r\n",
+        "### Estimate how many components are needed to describe the data (PCA)\r\n",
         "pca_explained = PCA().fit(z_test)\r\n",
         "plt.plot(np.cumsum(pca_explaoned.explained_variance_ratio_))\r\n",
         "plt.xlabel('number of components')\r\n",
@@ -942,17 +942,7 @@
         "# build pca dataframe\r\n",
         "principalDf = pd.DataFrame(data=principalComponents, columns=['principal component 1', 'principal component 2'])\r\n",
         "targetDF = pd.DataFrame(data=testDF_Y.to_numpy(), columns=['target'])\r\n",
-        "finalDF = pd.concat([principalDf, targetDF], axis = 1)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hSBgUNCkM05C"
-      },
-      "source": [
+        "finalDF = pd.concat([principalDf, targetDF], axis = 1)\r\n",
         "# scatterplot\r\n",
         "plt.figure(figsize=(8,5))\r\n",
         "plt.xlabel('Principal Component 1')\r\n",
