updated randomized search

--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -344,7 +344,7 @@
         "id": "4194a4eCBSh5"
       },
       "source": [
-        "def create_encoder(encoding_dim=140, intermediate_dim=140, latent_dim=5, latent_activation='softplus', dropout_rate=0.2, regulazier_rate=0.004): # maybe delete encoding and latent dim, do something with input shape\r\n",
+        "def create_encoder(encoding_dim=140, intermediate_dim=140, latent_dim=5, dropout_rate=0.2, regulazier_rate=0.004): # maybe delete encoding and latent dim, do something with input shape\r\n",
         "    \"\"\"Maps ECG5000 time series to a triplet (z_mean, z_log_var, z).\"\"\"\r\n",
         "\r\n",
         "    ### Define Layers\r\n",
@@ -354,8 +354,8 @@
         "    encoded = Dropout(dropout_rate, name='Dropout_1')(encoded)\r\n",
         "    encoded = Dense(latent_dim, activation='tanh', name='Encode_2', kernel_regularizer=l2(regulazier_rate), activity_regularizer=l2(regulazier_rate))(encoded)\r\n",
         "\r\n",
-        "    z_mean = Dense(latent_dim, activation=latent_activation, name=\"z_mean\")(encoded)\r\n",
-        "    z_log_var = Dense(latent_dim, activation=latent_activation, name=\"z_log_var\")(encoded)\r\n",
+        "    z_mean = Dense(latent_dim, activation='softplus', name=\"z_mean\")(encoded)\r\n",
+        "    z_log_var = Dense(latent_dim, activation='softplus', name=\"z_log_var\")(encoded)\r\n",
         "    z = Sampling(name='Sample_layer')([z_mean, z_log_var])\r\n",
         "\r\n",
         "    ### Instantiate encoder\r\n",
@@ -588,11 +588,11 @@
       },
       "source": [
         "### Definde function to create model\r\n",
-        "def create_model(latent_activation='softplus', intermediate_dim=140, dropout_rate=0.2, regulazier_rate=0.004, optimizer='adam', learn_rate=0.001, name='VAE'):\r\n",
+        "def create_model(intermediate_dim=140, dropout_rate=0.2, regulazier_rate=0.004, optimizer='adam', learn_rate=0.001, name='VAE'):\r\n",
         "    \"\"\"Creates VAE model, required for wrapping in estimator interface KerasRegressor, while accepting the hyperparameters we want to tune. We also pass some default values.\"\"\"\r\n",
         "    \r\n",
         "    # create encoder \r\n",
-        "    encoder = create_encoder(latent_activation=latent_activation, intermediate_dim=intermediate_dim, dropout_rate=dropout_rate, regulazier_rate=regulazier_rate)\r\n",
+        "    encoder = create_encoder(intermediate_dim=intermediate_dim, dropout_rate=dropout_rate, regulazier_rate=regulazier_rate)\r\n",
         "    # create decoder \r\n",
         "    decoder = create_decoder(intermediate_dim=intermediate_dim, dropout_rate=dropout_rate, regulazier_rate=regulazier_rate)\r\n",
         "    # create vae\r\n",
@@ -1152,9 +1152,7 @@
       "source": [
         "### Define evaluated params and it's value range\r\n",
         "space = {\r\n",
-        "        #'epochs' :              [50, 100],\r\n",
-        "        #'latent_activation' :   ['softplus','softmax','sigmoid'],\r\n",
-        "        #'optimizer' :           ['adam', 'SGD'],\r\n",
+        "        'optimizer' :           ['adam', 'SGD'],\r\n",
         "        'batch_size' :          list(np.logspace(0,6,7, base=2, dtype=int)),\r\n",
         "        'dropout_rate' :        list(np.linspace(0, 1)),\r\n",
         "        'regulazier_rate' :     list(np.logspace(-6,-1,6)),\r\n",
