--- a/VAE_v2.0.ipynb
+++ b/VAE_v2.0.ipynb
@@ -736,10 +736,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "BTkdJdc_N5SN",
-        "outputId": "1765d9b3-c5fe-46bd-fe52-400c88163737",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1765d9b3-c5fe-46bd-fe52-400c88163737"
       },
       "source": [
         "### Train\r\n",
@@ -845,7 +845,21 @@
             "Epoch 47/100\n",
             "250/250 [==============================] - 10s 40ms/step - loss: 19.3654 - reconstruction_loss: 15.8319 - kl_loss: 3.5335 - val_loss: 12.2869\n",
             "Epoch 48/100\n",
-            " 99/250 [==========>...................] - ETA: 5s - loss: 18.9459 - reconstruction_loss: 15.4365 - kl_loss: 3.5094"
+            "250/250 [==============================] - 10s 40ms/step - loss: 19.2148 - reconstruction_loss: 15.7489 - kl_loss: 3.4659 - val_loss: 12.9493\n",
+            "Epoch 49/100\n",
+            "250/250 [==============================] - 10s 40ms/step - loss: 19.2694 - reconstruction_loss: 15.7251 - kl_loss: 3.5444 - val_loss: 12.8486\n",
+            "Epoch 50/100\n",
+            "250/250 [==============================] - 10s 40ms/step - loss: 19.2808 - reconstruction_loss: 15.6815 - kl_loss: 3.5993 - val_loss: 12.6290\n",
+            "Epoch 51/100\n",
+            "250/250 [==============================] - 10s 40ms/step - loss: 19.2040 - reconstruction_loss: 15.5998 - kl_loss: 3.6043 - val_loss: 12.7671\n",
+            "Epoch 52/100\n",
+            "250/250 [==============================] - 10s 40ms/step - loss: 19.1322 - reconstruction_loss: 15.5605 - kl_loss: 3.5717 - val_loss: 13.0938\n",
+            "Epoch 53/100\n",
+            "250/250 [==============================] - 10s 40ms/step - loss: 19.1272 - reconstruction_loss: 15.5159 - kl_loss: 3.6114 - val_loss: 12.6217\n",
+            "Epoch 54/100\n",
+            "250/250 [==============================] - 10s 40ms/step - loss: 18.8504 - reconstruction_loss: 15.3584 - kl_loss: 3.4920 - val_loss: 12.5955\n",
+            "Epoch 55/100\n",
+            "207/250 [=======================>......] - ETA: 1s - loss: 18.7801 - reconstruction_loss: 15.3140 - kl_loss: 3.4661"
           ],
           "name": "stdout"
         }
@@ -1354,7 +1368,7 @@
         "id": "H0e7rRTv6STo"
       },
       "source": [
-        "# Visualisierung der Hyperparameter Opt. Ergebnisse"
+        "# Visualization of Hyperparameter Opt. Results"
       ]
     },
     {
